# colorspaces

./: Cargo.toml
src/: decorerinfo.rs  image.rs  lib.rs  preset.rs
src/colorspace/: mod.rs
