[package]
name = "pixmeta"
version = "0.0.0"
authors = ["James Forster <james.forsterer@gmail.com>"]
edition = "2024"
description = """
This crate provides types representing pixel color-spaces.
"""
documentation = "https://docs.rs/pixmeta"
readme = "README.md"
homepage = "https://github.com/ripytide/pixmeta"
repository = "https://github.com/ripytide/pixmeta"
license = "MIT"
keywords = ["pixel", "image", "image-processing"]
categories = ["pixel", "image", "image-processing"]

[features]
default = []

[lints.rust]
missing_docs = "deny"
